     in the bl_fort_module -- this is set to single or double
     precision at compile time.  All constants also now use
     this type.  For brevity, we rename it to 'rt' in the use
     statement.  (issue #34)

  -- the sponge is now time-centered by default (issue #7)

  -- the ppm_temp_fix stuff has been documented and made
     consistent across dimensions (issue #25)

# previous changes:

* 17.01

  -- the radiation-specific version of computeTemp has been removed
     and instead everything goes through the main Castro computeTemp.
     This affects, in particular, how we treated small internal
     energies in radiation. (issue #64)

  -- the radiation-specific versions of umeth and consup have been
     merged with the pure hydro routines.  This gives round-off level
     differences.  This also now uses all velocity components in the
     kinetic energy correction for radiation. (issues #66, 70)

  -- a minor bug was fixed in the 3-d radiation characteristic tracing,
     regarding which gamma_1 (gamc) is used.


* 16.12a

  -- fix a restart bug with radiation that was introduced after 16.10
     (this was cherry-picked from development) (issues #76, 78)

* 16.12

  -- BoxLib now requires a C++ 11 compiler by default.  As part of
     this transition, PArrays are replaced by C++ Arrays.
     Additionally, changes to the BoxLib build system mean that we
     only need to supple COMP for the compiler.  FCOMP is now
     ignored.

  -- The User's Guide has been updated to reflect the current flow of
     the algorithm.

* 16.11

  -- we now distinguish between gravity (which can include a 
     constant gravitational acceleration) and self-gravity,
     with the GRAVITY and SELF_GRAVITY preprocessor directives

  -- some work on the sync between levels was done -- this will
     be described in a forthcoming paper. The main change by default
     is that after a reflux, we recompute the value of the source terms